--- a/a1/Makefile
+++ b/a1/Makefile
@@ -1,14 +1,15 @@
 JAVAC=javac
 JFLEX=jflex
 #JFLEX=/home/fsong/jflex/bin/jflex
+CLASS=Pair.class Token.class Lexer.class Scanner.class 
 
-all: Token.class Lexer.class Scanner.class
+all: $(CLASS)
 
-test: Token.class Lexer.class Scanner.class
-	java Scanner < sampleData.txt 
+test: $(CLASS)
+	java Scanner < sampleData.txt > result.tok
 
-tokenize: Token.class Lexer.class Scanner.class
-	java Scanner sampleData.txt > result.tok
+tokenize: $(CLASS)
+	java Scanner < newsdata.txt > result.tok
 
 %.class: %.java
 	$(JAVAC) $^
@@ -17,4 +18,4 @@ Lexer.java: token.flex
 	$(JFLEX) token.flex
 
 clean:
-	rm -f Lexer.java *.class *~ *.out
+	rm -f Lexer.java *.class *~ 
