Comments, while loop, if stmt

--- a/project/Makefile
+++ b/project/Makefile
@@ -12,12 +12,18 @@ Main.class: absyn/*.java parser.java sym.java Lexer.java ShowTreeVisitor.java Sc
 %.class: %.java
 	$(JAVAC) $(CLASSPATH)  $^
 
-Lexer.java: tiny.flex
-	$(JFLEX) tiny.flex
+Lexer.java: cm.flex
+	$(JFLEX) cm.flex
 
-parser.java: tiny.cup
+parser.java: cm.cup
 	#$(CUP) -dump -expect 3 tiny.cup
-	$(CUP) -expect 3 tiny.cup
+	$(CUP) -expect 3 cm.cup
+
+tiny:
+	java $(CLASSPATH) Main fac.tiny
+
+test:
+	java $(CLASSPATH) Main data/simple.cm
 
 clean:
 	rm -f parser.java Lexer.java sym.java *.class absyn/*.class *~
